[package]
name = "workout_plans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
icalendar = "0.15.1"
lazy_static = "1.4.0"
regex = "1.7.1"

[dev-dependencies]
insta = { version = "1.26.0", features = ["filters"] }
